# BootlegDynamixelWizard

./: .gitignore  CMakeLists.txt  README.md
include/: ControlTable.hpp  DynamixelManager.hpp  DynamixelMotor.hpp  Main.hpp  PIDController.hpp
src/: DynamixelManager.cpp  Main.cpp  PIDController.cpp
